fixed #15 #16 为 disqus 侧边栏添加 overflow-y: auto 属性

--- a/themes/hexo3/source/css/_partial/discuss-sidebar.styl
+++ b/themes/hexo3/source/css/_partial/discuss-sidebar.styl
@@ -1,6 +1,6 @@
 .main-layout
     position: relative;
-    overflow: hidden;
+    overflow: scroll;
     -moz-transition: all 300ms ease-out 0ms;
     -o-transition: all 300ms ease-out 0ms;
     -webkit-transition: all 300ms ease-out;
@@ -76,4 +76,6 @@
     color: rgba(0,0,0,0);
 
 .sidebar-inner
-    padding: 20px;
+    padding: 20px
+    overflow-y: auto
+    height: 100%
